--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Usage: pip install -r requirements.txt
 
 # Base ----------------------------------------
-matplotlib>=3.2.2
+# matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.1
 Pillow>=7.1.2
@@ -15,18 +15,17 @@ tqdm>=4.64.0
 
 
 # Logging -------------------------------------
-tensorboard>=2.4.1
+# tensorboard>=2.4.1
 
 
 # Plotting ------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
+# pandas>=1.1.4
+# seaborn>=0.11.0
 
 # Extras --------------------------------------
-ipython  # interactive notebook
-psutil  # system utilization
-thop>=0.1.1  # FLOPs computation
+# ipython  # interactive notebook
+# psutil  # system utilization
+# thop>=0.1.1  # FLOPs computation
 
 # my requirements
 flask
-gunicorn
