--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.7.0  # see https://pytorch.org/get-started/locally/ (recommended)
-torchvision>=0.8.1
+torch>=1.7.0+cpu  # see https://pytorch.org/get-started/locally/ (recommended)
+torchvision>=0.8.1+cpu
 tqdm>=4.64.0
 
 
